--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-keechma-next-app",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "description": "A CLI tool to bootstrap keechma next apps",
   "main": "src/index.js",
   "bin": {
@@ -12,7 +12,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "repository": {
+  "type": "git",
+  "url": "https://github.com/tlevacic/create-keechma-next-app"
+},  
+  "author": "Tin Levacic",
   "keywords": ["Keechma Next", "Keechma", "CLI", "React", "Expo", "React Native"],
   "license": "ISC",
   "dependencies": {
